--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="sheypoor challenge"
-    />
-    <title>sheypoor</title>
-  </head>
-  <body>
-    <div id="root"></div>
 
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="sheypoor challenge" />
+  <link rel="icon" href="./images/logo.png" />
+
+  <title>sheypoor</title>
+</head>
+
+<body>
+  <div id="root"></div>
+
+</body>
+
 </html>
